[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/weapons/Weapon_08.png" type="Texture" id=1]
[ext_resource path="res://scripts/Weapon.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponLoc:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponLoc:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "cleave"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponLoc:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 10, -10 ), Vector2( 15, 0 ), Vector2( 10, 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponLoc:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -20.0, 20.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "stab"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponLoc:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 0 ), Vector2( 15, 0 ), Vector2( 10, 0 ) ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 5.0
height = 12.0

[node name="MeleeWeapon" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/cleave = SubResource( 6 )
anims/stab = SubResource( 3 )

[node name="WeaponLoc" type="Node2D" parent="."]
position = Vector2( 5, 0 )

[node name="DamageArea" type="Area2D" parent="WeaponLoc"]
rotation = 0.820305
scale = Vector2( 0.5, 0.5 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponLoc/DamageArea"]
rotation = 0.750492
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="WeaponLoc"]
rotation = 0.820305
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 1 )

[node name="AttackCooldown" type="Timer" parent="."]
